user-profile: Fix textarea being too small in "Manage user" modal.
This commit fixes textarea width being too small for "Long text"
custom profile fields in "Manage user" modal. This commit removes
the CSS which set the incorrect width and also restricts the
maximum width such that it does not overflows on narrow screens.

--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -1725,6 +1725,7 @@ label.preferences-radio-choice-label {
     & textarea {
         /* Subtract (1px border and 6px padding) on each side */
         width: calc(var(--modal-input-width) - 14px);
+        max-width: calc(100% - 14px);
     }
 }
 
@@ -2113,12 +2114,6 @@ label.preferences-radio-choice-label {
     #download_zuliprc {
         flex-direction: column;
         margin-top: 5px;
-    }
-
-    #edit-user-form {
-        .custom_user_field textarea {
-            width: calc(100% - 25px);
-        }
     }
 
     .topic_date_updated {
